hphp/test/zend/good/ext/ldap/tests/ldap_sasl_bind_error.php.skipif
<?hh require_once('skipif.inc');
require_once('skipifbindfailure.inc');
if (!function_exists("ldap_sasl_bind")) die("skip LDAP extension not compiled with SASL support");